# VF501z

./: .gitignore  README.md  pyproject.toml
tests/: test_archiver.py  test_audit.py  test_crypto.py  test_forensics.py  test_hasher.py  test_manifest.py
vf501/: __init__.py  archiver.py  audit.py  cli.py  crypto.py  forensics.py  hasher.py  manifest.py
