[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vf501"
version = "1.0.0"
description = "VF501 – Auditable file archiver for sensitive donor data and digital forensics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cryptography>=41.0.0",
    "click>=8.0.0",
]

[project.scripts]
vf501 = "vf501.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
